--- a/style.css
+++ b/style.css
@@ -11,10 +11,10 @@ html {
 html, body {
   min-height: 100%;
   display: flex;
-  flex-direction: column;
+  flex-direction: ;
   font-weight: 300;
   line-height: 1.5;
-	
+	text-align: center;
 }
 
 p {
