--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ html, body {
   font-weight: 300;
   line-height: 1.5;
 	text-align: left;
-	text-indent 50px;
+	text-indent 500px;
 }
 
 p {
@@ -44,7 +44,8 @@ color: #FF00FF
 
 ul#menu li {
     display:inline;
-	margin: 80px;
+	margin: 20px;
+	text-align: right;
 }
 
 li {
