--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ html, body {
   flex-direction: ;
   font-weight: 300;
   line-height: 1.5;
-	text-align: left;
+	text-align: center;
 	text-indent 500px;
 }
 
@@ -51,5 +51,14 @@ ul#menu li {
 li {
     list-style-type: none;
 
+}
+
+wrapper {
+  background-color: green; /* for vizualization purposes */
+  text-align: center;
+}
+yourdiv {
+  background-color: red; /* for vizualization purposes */
+  display: inline-block;
 }
 
