--- a/style.css
+++ b/style.css
@@ -53,11 +53,11 @@ li {
 
 }
 
-wrapper {
+.wrapper {
   background-color: green; /* for vizualization purposes */
   text-align: center;
 }
-yourdiv {
+.yourdiv {
   background-color: red; /* for vizualization purposes */
   display: inline-block;
 }
