--- a/style.css
+++ b/style.css
@@ -50,3 +50,12 @@ ul#menu li {
 
 li {
     list-style-type: none;
+	
+.container {
+   text-align: center;
+ }
+
+.container pre {
+  display: inline-block;
+  text-align: left;
+ }
