--- a/style.css
+++ b/style.css
@@ -15,6 +15,11 @@ html, body {
   font-weight: 300;
   line-height: 1.5;
 	text-align: center;
+	display: inline-block; 
+	text-align: left;
+
+	
+   
 
 }
 
