--- a/style.css
+++ b/style.css
@@ -15,7 +15,6 @@ html, body {
   font-weight: 300;
   line-height: 1.5;
 	text-align: center;
-
 }
 
 section {
@@ -25,23 +24,13 @@ section {
 }
 
 
-
-
-p {
-text-align: center;
-
-body {
-	 
-}
-
 .phoneaddress {
-
-	text-align: center;
+text-align: center;
 }
 
 .pro {
 color: #FF00FF
-	text-align: center;
+	
 }
 
 .links {	
@@ -50,8 +39,7 @@ color: #FF00FF
 
 ul#menu li {
     display:inline;
-	margin: 20px;
-	text-align: center;
+	margin: 20px
 	list-style-type: none;
 }
 
